# fastapi_blog

./: .gitignore  auth.py  blog.db  config.py  database.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  requirements.txt  schemas.py
routers/: posts.py  users.py
static/js/: utils.js
templates/: account.html  error.html  home.html  layout.html  post.html  user_posts.html
