[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.131.0",
    "greenlet>=3.3.2",
    "isort>=8.0.0",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.46",
]
